--- a/control
+++ b/control
@@ -1,7 +1,9 @@
 Package: com.golddavid.inspectivec
 Name: InspectiveC
 Depends: mobilesubstrate (>= 0.9.5.000)
-Version: 1.0.8
+Conflicts: com.golddavid.inspectivec-multithreaded
+Replaces: com.golddavid.inspectivec-multithreaded
+Version: 1.0.9
 Architecture: iphoneos-arm
 Description: objc_msgSend hook for debugging/inspection purposes.
 Depiction: http://apt.golddavid.com/depictions/InspectiveC.html
